Fix overflow issues, adjust for bottom toolbar

--- a/theme/asset-editor.less
+++ b/theme/asset-editor.less
@@ -18,6 +18,8 @@
 .asset-editor-sidebar-name {
     overflow: hidden;
     text-overflow: ellipsis;
+    margin-bottom: 0.5rem;
+    font-weight: 700;
 }
 
 .asset-editor-sidebar-preview {
