--- a/theme/common.less
+++ b/theme/common.less
@@ -153,7 +153,7 @@ pre {
     z-index: (@blocklyFlyoutZIndex)-1;
 }
 
-#blocksArea, #monacoEditor, #pxtJsonEditor, #serialEditor, #filelist {
+#blocksArea, #monacoEditor, #pxtJsonEditor, #serialEditor, #assetEditor, #filelist {
     bottom: @editorToolsCollapsedHeight;
 }
 
@@ -162,6 +162,7 @@ pre {
 .hideEditorToolbar #pxtJsonEditor,
 .hideEditorToolbar #serialEditor,
 .hideEditorToolbar #githubEditor,
+.hideEditorToolbar #assetEditor,
 .hideEditorToolbar #filelist {
     bottom: 0rem !important;
 }
@@ -1288,7 +1289,7 @@ p.ui.font.small {
         height: 9rem;
     }
 
-    #blocksArea, #monacoEditor, #pxtJsonEditor, #serialEditor, #filelist {
+    #blocksArea, #monacoEditor, #pxtJsonEditor, #serialEditor, #assetEditor, #filelist {
         bottom: @editorToolsCollapsedMobileHeight;
     }
 
@@ -1558,7 +1559,7 @@ p.ui.font.small {
         top: @thinMenuHeight;
         padding: 0.5rem 1.5rem;
     }
-    #blocksArea, #monacoEditor, #pxtJsonEditor, #serialEditor, #filelist {
+    #blocksArea, #monacoEditor, #pxtJsonEditor, #serialEditor, #assetEditor, #filelist {
         bottom: @editorToolsThinHeight;
     }
 
@@ -1702,7 +1703,7 @@ div.simframe.ui.embed {
         display: inherit;
     }
 
-    #blocksArea, #monacoEditor, #pxtJsonEditor, #serialEditor, #editortools, #msg {
+    #blocksArea, #monacoEditor, #pxtJsonEditor, #serialEditor, #assetEditor, #editortools, #msg {
         bottom: 1.5rem !important;
     }
 
